--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,5 +14,6 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_VUE_MAIN_PROJECT_57792 }}'
           projectId: vue-main-project-57792
+          entryPoint: "./main-prj-01-starting-setup" 
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
